--- a/list.html
+++ b/list.html
@@ -7,6 +7,7 @@
 		<link href="https://fonts.googleapis.com/css?family=Roboto|Roboto+Slab" rel="stylesheet">
 		<script src="main.js" type="text/javascript"></script>
 	</head>
+
 	<body>
 		<header>
 			<h1>My ToDo Lists</h1>
@@ -16,16 +17,18 @@
 			</nav>
 		</header>
 		<div id="todo-lists">
-			<div class="list">
-				<a href="list.html">Groceries</a>
+			<div id="todo-lists">
+				<div class="list">
+					<h2 class="list-title">Groceries</h2>
+					<ol>
+						<li>Eggs</li>
+						<li>Milk</li>
+						<li>Cereal</li>
+					</ol>
+				</div>
+				<input type = "text"></input>
+				<button>Add Item</button>
 			</div>
-			<div class="list">
-				Homework
-			</div>
-			<div class="list">
-				Random Errands
-			</div>
-			<button onclick = "addNewList()">Add New List</button>
 		</div>
 	</body>
 </html>
